--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: my-app
-        image: asia-southeast1-docker.pkg.dev/poc-innovation-iot/mass-artifact-registry/example-react:latest
+        image: asia-southeast1-docker.pkg.dev/poc-innovation-iot/mass-artifact-registry/example-react:{{TAG}}
         ports:
         - containerPort: 3000
 apiVersion: v1
